Agregando meta keys

--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -3,17 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tú perfil</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi cuenta</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <meta name="viewport"
-        content="width=device=width, user-scalable=no, initial-scale=1.0, maximum scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-
 
 <body>
     <header>
@@ -49,9 +48,9 @@
         </nav>
     </header>
     <main class="main">
-        <p class="tituloPrincipal">
-            Perfil
-        </p>
+        <h1 class="tituloPrincipal">
+            Perfil de usuario GoodDollar Marketplace
+        </h1>
         <div class="containerPerfil">
             <div class="mainPefil">
                 <div>
@@ -59,9 +58,13 @@
                         alt="">
                 </div>
                 <section>
-                    <h2>Roger Natividad</h2>
-                    <h3>Software Engineer - Web Developer</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, corporis.</p>
+                    <h2>Tiny sollosa</h2>
+                    <h3>Agente inmobiliaria -tiempo completo</h3>
+                    <p>
+                        Agente inmobiliaria, le asesoro en la compra de la casa de sus sueños a muy buenos precios.
+                    </p>
+                    <p>Soy de cartagena Colombia</p>
+                    <p>Redes sociales:</p>
                     <ul>
                         <li><a href="#" class="fa fa-facebook"></a></li>
                         <li><a href="#" class="fa fa-twitter"></a></li>
