--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Super casa en oferta</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Casa en el Encanto</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <meta name="viewport"
-        content="width=device=width, user-scalable=no, initial-scale=1.0, maximum scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -57,13 +57,8 @@
             </div>
             <div class="sectionProducto">
                 <section>
-                    <h3>Noticias</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
-                        necessitatibus
-                        numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad
-                        solitatibus
-                    </p>
-                    <a href="#">Ver más</a>
+                    <p class="titulo">Por el mes de Agosto compre su casa y obtenga un 80% de descuento en la intermediación de seguridad</p>
+                    <a href="#">Ver terminos y condiciones</a>
                 </section>
             </div>
             <div class="targetaPrecioContainer container-fluid d-flex justify-content-center p-0">
@@ -81,13 +76,13 @@
                                 <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
                             </div>
                         </div>
-                        <button class="carousel-control-prev bg-dark" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
+                        <button class="carousel-control-prev bg-dark" type="button"
+                            data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next bg-dark" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
+                        <button class="carousel-control-next bg-dark" type="button"
+                            data-bs-target="#carouselExampleControls" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
@@ -95,13 +90,10 @@
                 </div>
                 <div class="targetaPrecio">
                     <div class="textoPrecio">
-                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                        <h2>Precio: $100.000</h2>
-                        <h3>Descripción de la casa</h3>
-                        <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
-                            laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
-                            omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem
+                        <h1 class="tituloPrincipal">Casa en el encanto Ganga!</h1>
+                        <p class="textoParrafo">Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel, acabados con pisos en cerámica , baños y cocina enchapados, todos los servicios, actualmente rentando en los 3 aptos.
                         </p>
+                        <h2>Precio: $100.000.000</h2>
                     </div>
                 </div>
             </div>
@@ -110,55 +102,49 @@
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (4).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Apartamento en modelia</h5>
+                        <p class="card-text">HERMOSO APARTAMENTO REFORMADO. CONSTA DE 3 HABITACIONES CON CLOSET....</p>
+                        <a href="#" class="btn btn-primary">$120.000.000</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (5).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Apartamento en modelia</h5>
+                        <p class="card-text">APARTAMENTO A 5 MINUTOS DE 3 UNIVERSIDADES, CON MUCHO COMERCIO....</p>
+                        <a href="#" class="btn btn-primary">$135.000.000</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (6).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Casa en timiza</h5>
+                        <p class="card-text">CASA UBICADA EN SECTOR PRIVILEGIADO DE LA CIUDAD POR SU CERCAN....</p>
+                        <a href="#" class="btn btn-primary">$220.000.000</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (7).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Casa en caño cristales</h5>
+                        <p class="card-text">CASA ESQUINERA MUY COMERCIAL CON 5 LOCALES Y 4 HABITACIONES...</p>
+                        <a href="#" class="btn btn-primary">$180.000.000</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (8).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Casa en el codito</h5>
+                        <p class="card-text">HERMOSA CASA REFORMADA. CONSTA DE 8 HABITACIONES CON CLOSET, 3 BAÑOS...</p>
+                        <a href="#" class="btn btn-primary">$150.000.000</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (9).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Apartamento hermoso en ccsa blanca</h5>
+                        <p class="card-text">APARTAMENTO EN OPORTUNIDAD CONJUNTO LOS LIBERTADORES...</p>
+                        <a href="#" class="btn btn-primary">$90.000.000</a>
                     </div>
                 </div>
             </div>
