--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Contáctanos</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="informacion, ubicación, dirección, horarios de atencion, quienes somos, sobre nosotros">
+    <title>Más sobre nosotros</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <meta name="viewport"
-        content="width=device=width, user-scalable=no, initial-scale=1.0, maximum scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -52,16 +53,11 @@
     <main class="main">
         <div class="mainContacto">
             <div class="textoContacto">
-                <h1 class="tituloPrincipal">¿Quienes somos?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit officia maxime mollitia provident
-                    ea sed laborum iste optio explicabo, molestias, molestiae, sint veniam accusantium excepturi
-                    inventore soluta quidem quaerat eos! ipsum dolor sit amet, consectetur adipiscing elit.
-                    Suspendisse dignissim vehicula nunc
-                    facilisi
-                    quis
-                    facilisis elementum pretium ac. Tempor molestie quis non pulvinar a. Volutpat lectus tellus amet
-                    sapien.
-                    Condimentum nulla scelerisque amet mauris in elit. Commodo arcu.</p>
+                <h1 class="tituloPrincipal">¿Quienes somos Gooddollar Marketplace?</h1>
+                <p>Somos un espacio para comprar y vender bienes raices como casas, apartamentos, fincas, parcelas, lotes de una manera practica con un solo click puede adelantar un 10% y asesgurar que su propiedad sera suya, para eso podra chatear y comunicarse con el vendedor para obtener mas información.
+
+                    Sus fondos estan seguros hasta que toda la transacción no sea comprobada con total exito desde ambas partes interesadas en el trato y revisada por un agente de GoodDollar marketplace no se liberaran los fondos.
+                </p>
             </div>
             <div class="carruselesContacto">
                 <div class="carruselContacto">
@@ -95,7 +91,8 @@
                 <div class="ubicacion">
                     <div class="ubicacionTexto">
                         <h2>Ubicación</h2>
-                        <p>Bogotá, Colombia</p>
+                        <p>Puede comunicarse con nosotros al número: +573022378198</p>
+                        <p>Nuestra sede pricipal se encuentra en Bogotá, Colombia</p>
                     </div>
                     <div>
                         <div>
