--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Inicio</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio Gooddollar Marketplace</title>
+    <meta name="keywords" content="marketplace, tienda, bienes raices, casas, apartamentos, venta, compra, gooddollar">
+    <meta name="description" content="Comprando inmuebles con G$ de manera segura con muy buenos precios">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <meta name="viewport"
-        content="width=device=width, user-scalable=no, initial-scale=1.0, maximum scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -50,6 +52,7 @@
 
     <main class="main">
         <div class="main__index">
+            <h1>Marketplace GoodDollar, todo en un lugar</h1>
             <div class="filtros p-1">
                 <div class="form-floating ">
                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
