Agregando texto e interconexion de las paginas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg p-0 bg-light" data-aos="fade-right">
             <div class="container-fluid">
-                <img class="logo" src="./assets/img/LOGO GOODDOLLAR 4.png" alt="">
+                <img class="logo" src="./assets/img/LOGO GOODDOLLAR 4.png" alt="Una G, grande con fondo azul">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -76,56 +76,92 @@
                 <section>
                     <div class="section">
                         <h3>Noticias</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
-                            necessitatibus
-                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
-                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
-                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
-                            numquam ratione quisquam nostrum quaerat delectu</p>
-                        <a href="#">Ver más</a>
+                        <p>Por el mes de Agosto compre su casa y obtenga un 80% de descuento en la intermediación de seguridad</p>
+                        <a href="#">Terminos y condiciones</a>
                     </div>
                 </section>
                 <div class="container textoParrafo">
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (1).jpg" alt=""></figure>
-                        <h4>Titulo - descripción 1</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <a href="./Product_1.html">Ver más</a>
+                        <h4>Casa en el encanto Ganga!</h4>
+                        <p>Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel...</p>
+                        <a href="../pages/Product_1.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (2).jpg" alt=""></figure>
-                        <h4>Titulo - descripción 2</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <a href="#">Ver más</a>
+                        <h4>Apartamento en modelia</h4>
+                        <p>HERMOSO APARTAMENTO REFORMADO. CONSTA DE 3 HABITACIONES CON CLOSET...</p>
+                        <a href="../pages/Product_2.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (3).jpg" alt=""></figure>
-                        <h4>Titulo - descripción 3</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <a href="#">Ver más</a>
+                        <h4>Apartamento en teusaquillo</h4>
+                        <p>APARTAMENTO A 5 MINUTOS DE 3 UNIVERSIDADES, CON MUCHO COMERCIO</p>
+                        <a href="../pages/Product_3.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (4).jpg" alt=""></figure>
-                        <h4>Titulo - descripción 4</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <a href="#">Ver más</a>
+                        <h4>Casa en timiza</h4>
+                        <p>CASA ESQUINERA MUY COMERCIAL CON 5 LOCALES Y 4 HABITACIONES...</p>
+                        <a href="../pages/Product_4.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (5).jpg" alt=""></figure>
-                        <h4>Titulo - descripción 5</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <a href="#">Ver más</a>
+                        <h4>Casa en caño cristales</h4>
+                        <p>HERMOSA CASA REFORMADA. CONSTA DE 8 HABITACIONES CON CLOSET...</p>
+                        <a href="../pages/Product_5.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (6).jpg" alt=""></figure>
-                        <h4>Titulo - descripción 6</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <a href="#">Ver más</a>
+                        <h4>Casa el codito</h4>
+                        <p>Casa con patio ubicada cerca a las principales vias del sector de keneddy, con 5 habitaciones...</p>
+                        <a href="../pages/Product_6.html">Ver más</a>
+                    </div>
+
+                    <div class="targeta">
+                        <figure><img src="./assets/img/casa (7).jpg" alt=""></figure>
+                        <h4>Apartamento hermoso en casa blanca</h4>
+                        <p>APARTAMENTO EN OPORTUNIDAD CONJUNTO LOS LIBERTADORES...</p>
+                        <a href="../pages/Product_7.html">Ver más</a>
+                    </div>
+                    <div class="targeta">
+                        <figure><img src="./assets/img/casa (8).jpg" alt=""></figure>
+                        <h4>Casa en el santafe</h4>
+                        <p>Casa en el centro historico de bogota cerca de parques y zonas verdes...</p>
+                        <a href="../pages/Product_8.html">Ver más</a>
+                    </div>
+
+                    <div class="targeta">
+                        <figure><img src="./assets/img/casa (9).jpg" alt=""></figure>
+                        <h4>Casa en el santa marta</h4>
+                        <p>Casa muy cerca de la playa a solo dos cuadras con licencia...</p>
+                        <a href="../pages/Product_9.html">Ver más</a>
+                    </div>
+
+                    <div class="targeta">
+                        <figure><img src="./assets/img/casa (10).jpg" alt=""></figure>
+                        <h4>Casa en el poblado</h4>
+                        <p>Hermosa casa en medellin, 6 cuartos y 2 baños 3 garajes y pisina a 20 minutos en auto del centro de la ciudad...</p>
+                        <a href="../pages/Product_10.html">Ver más</a>
+                    </div>
+
+                    <div class="targeta">
+                        <figure><img src="./assets/img/casa (11).jpg" alt=""></figure>
+                        <h4>Casa en el quirigua</h4>
+                        <p>HERMOSA CASA, CONSTA DE 3 HABITACIONES CON CLOSET, 2 BAÑOs...</p>
+                        <a href="../pages/Product_11.html">Ver más</a>
+                    </div>
+
+                    <div class="targeta">
+                        <figure><img src="./assets/img/casa (5).jpg" alt=""></figure>
+                        <h4>Casa en el codito</h4>
+                        <p>HERMOSA CASA REFORMADA. CONSTA DE 2 HABITACIONES CON CLOSET, 1 BAÑO...</p>
+                        <a href="../pages/Product_12.html">Ver más</a>
                     </div>
                 </div>
             </div>
