--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cuenta, perfil, acerca de mi, a que se dedica, cuantos comercios exitosos ha realizado">
+    <meta name="description" content="Acerca de su cuenta creada en GoodDollar marketplace">
     <title>Mi cuenta</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
