--- a/pages/Product_11.html
+++ b/pages/Product_11.html
@@ -69,13 +69,13 @@
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="../assets/img/casa (5).jpg" class="d-block w-100" alt="">
-                            </div>
-                            <div class="carousel-item">
                                 <img src="../assets/img/casa (9).jpg" class="d-block w-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/casa (6).jpg" class="d-block w-100" alt="">
                             </div>
                         </div>
                         <button class="carousel-control-prev bg-dark" type="button"
@@ -92,14 +92,14 @@
                 </div>
                 <div class="targetaPrecio">
                     <div class="textoPrecio">
-                        <h1 class="tituloPrincipal">Casa en el encanto Ganga!</h1>
-                        <p class="textoParrafo">Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel, acabados
+                        <h1 class="tituloPrincipal">Casa en el quirigua</h1>
+                        <p class="textoParrafo">HERMOSA CASA, CONSTA DE 3 HABITACIONES CON CLOSET, 2 BAÑOs 2 GARAJES, TERRAZA Y SAUNA
                         </p>
-                        <h2>Precio: $100.000.000</h2>
+                        <h2>Precio: $240.000.000</h2>
                     </div>
                 </div>
             </div>
-
+            
             <div class="targetasProductosGrid justify-content-evenly">
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (2).jpg" class="card-img-top" alt="">
@@ -144,7 +144,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (7).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Apartamento hermoso en ccsa blanca</h5>
+                        <h5 class="card-title">Apartamento hermoso en casa blanca</h5>
                         <p class="card-text">APARTAMENTO EN OPORTUNIDAD CONJUNTO LOS LIBERTADORES...</p>
                         <a href="../pages/Product_7.html" class="btn btn-primary">$90.000.000</a>
                     </div>
