--- a/pages/Product_6.html
+++ b/pages/Product_6.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="gangas, casa en venta, apartamento en venta, recomendados, baratos, seguro, casa en el encanto, bogotá, colombia">
     <meta name="description" content="Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel, acabados con pisos en cerámica , baños y cocina enchapados, todos los servicios, actualmente rentando en los 3 aptos.">
-    <title>Casa en el Encanto</title>
+    <title>Casa en caño cristales</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
@@ -69,13 +69,13 @@
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
+                                <img src="../assets/img/casa (6).jpg" class="d-block w-100" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/img/casa (5).jpg" class="d-block w-100" alt="">
+                                <img src="../assets/img/casa (10).jpg" class="d-block w-100" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/img/casa (9).jpg" class="d-block w-100" alt="">
+                                <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
                             </div>
                         </div>
                         <button class="carousel-control-prev bg-dark" type="button"
@@ -92,10 +92,10 @@
                 </div>
                 <div class="targetaPrecio">
                     <div class="textoPrecio">
-                        <h1 class="tituloPrincipal">Casa en el encanto Ganga!</h1>
-                        <p class="textoParrafo">Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel, acabados
+                        <h1 class="tituloPrincipal">Casa en el codito</h1>
+                        <p class="textoParrafo">HERMOSA CASA REFORMADA. CONSTA DE 8 HABITACIONES CON CLOSET, 3 BAÑOS CASA ESQUINERA MUY COMERCIAL CON 5 LOCALES Y 4 HABITACIONES SALA COMEDOR , COCINA PATIO DE JUEGOS Y LAVADERO
                         </p>
-                        <h2>Precio: $100.000.000</h2>
+                        <h2>Precio: $150.000.000</h2>
                     </div>
                 </div>
             </div>
@@ -134,17 +134,17 @@
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="../assets/img/casa (6).jpg" class="card-img-top" alt="">
+                    <img src="../assets/img/casa (1).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Casa en el codito</h5>
-                        <p class="card-text">HERMOSA CASA REFORMADA. CONSTA DE 8 HABITACIONES CON CLOSET, 3 BAÑOS...</p>
-                        <a href="../pages/Product_6.html" class="btn btn-primary">$150.000.000</a>
+                        <h5 class="card-title">Casa en el encanto Ganga!</h5>
+                        <p class="card-text">Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel...</p>
+                        <a href="../pages/Product_1.html" class="btn btn-primary">$100.000.000</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (7).jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Apartamento hermoso en ccsa blanca</h5>
+                        <h5 class="card-title">Apartamento hermoso en casa blanca</h5>
                         <p class="card-text">APARTAMENTO EN OPORTUNIDAD CONJUNTO LOS LIBERTADORES...</p>
                         <a href="../pages/Product_7.html" class="btn btn-primary">$90.000.000</a>
                     </div>
