--- a/pages/Registro.html
+++ b/pages/Registro.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Registro, mejor marketplace, mejores precios">
+    <meta name="description" content="Registrese con facilidad en el mercado mas grande para comprar y vender bienes raices con la criptomoneda G$">
     <title>Registrese en GoodDollar marketplace</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
