--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="informacion, ubicación, dirección, horarios de atencion, quienes somos, sobre nosotros">
+    <meta name="description" content="Somos una empresa donde puede usar sus G$ para comprar bienes raices de manera segura.">
     <title>Más sobre nosotros</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
@@ -64,13 +65,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="...">
+                                <img src="../assets/img/casa (5).jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="...">
+                                <img src="../assets/img/casa (6).jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="...">
+                                <img src="../assets/img/casa (7).jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -92,7 +93,7 @@
                     <div class="ubicacionTexto">
                         <h2>Ubicación</h2>
                         <p>Puede comunicarse con nosotros al número: +573022378198</p>
-                        <p>Nuestra sede pricipal se encuentra en Bogotá, Colombia</p>
+                        <p>Nuestra sede principal se encuentra en Bogotá, Colombia</p>
                     </div>
                     <div>
                         <div>
