--- a/index.html
+++ b/index.html
@@ -84,49 +84,49 @@
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (1).jpg" alt=""></figure>
                         <h4>Casa en el encanto Ganga!</h4>
-                        <p>Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel...</p>
+                        <p>Casa en el encanto Engativa de 3 pisos con apartamentos...</p>
                         <a href="../pages/Product_1.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (2).jpg" alt=""></figure>
                         <h4>Apartamento en modelia</h4>
-                        <p>HERMOSO APARTAMENTO REFORMADO. CONSTA DE 3 HABITACIONES CON CLOSET...</p>
+                        <p>Casa con patio ubicada cerca a las principales vias del...</p>
                         <a href="../pages/Product_2.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (3).jpg" alt=""></figure>
                         <h4>Apartamento en teusaquillo</h4>
-                        <p>APARTAMENTO A 5 MINUTOS DE 3 UNIVERSIDADES, CON MUCHO COMERCIO</p>
+                        <p>APARTAMENTO A 5 MINUTOS DE 3 UNIVERSIDADES...</p>
                         <a href="../pages/Product_3.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (4).jpg" alt=""></figure>
                         <h4>Casa en timiza</h4>
-                        <p>CASA ESQUINERA MUY COMERCIAL CON 5 LOCALES Y 4 HABITACIONES...</p>
+                        <p>CASA UBICADA EN SECTOR PRIVILEGIADO...</p>
                         <a href="../pages/Product_4.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (5).jpg" alt=""></figure>
                         <h4>Casa en caño cristales</h4>
-                        <p>HERMOSA CASA REFORMADA. CONSTA DE 8 HABITACIONES CON CLOSET...</p>
+                        <p>CASA ESQUINERA MUY COMERCIAL CON 5 LOCALES...</p>
                         <a href="../pages/Product_5.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (6).jpg" alt=""></figure>
                         <h4>Casa el codito</h4>
-                        <p>Casa con patio ubicada cerca a las principales vias del sector de keneddy, con 5 habitaciones...</p>
+                        <p>Casa con patio ubicada cerca a las principales vias del...</p>
                         <a href="../pages/Product_6.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (7).jpg" alt=""></figure>
                         <h4>Apartamento hermoso en casa blanca</h4>
-                        <p>APARTAMENTO EN OPORTUNIDAD CONJUNTO LOS LIBERTADORES...</p>
+                        <p>APARTAMENTO EN OPORTUNIDAD...</p>
                         <a href="../pages/Product_7.html">Ver más</a>
                     </div>
                     <div class="targeta">
