--- a/pages/Product_11.html
+++ b/pages/Product_11.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="gangas, casa en venta, apartamento en venta, recomendados, baratos, seguro, casa en el encanto, bogotá, colombia">
     <meta name="description" content="Casa en el encanto Engativa de 3 pisos con apartamentos independientes por nivel, acabados con pisos en cerámica , baños y cocina enchapados, todos los servicios, actualmente rentando en los 3 aptos.">
-    <title>Casa en el Encanto</title>
+    <title>Casa en el quirigua</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
