Agreando nueva ruta al product_1

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                         <figure><img src="./assets/img/casa (1).jpg" alt=""></figure>
                         <h4>Casa en el encanto Ganga!</h4>
                         <p>Casa en el encanto Engativa de 3 pisos con apartamentos...</p>
-                        <a href="../pages/Product_1.html">Ver más</a>
+                        <a href="./pages/Product_1.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (2).jpg" alt=""></figure>
                         <h4>Apartamento en modelia</h4>
                         <p>Casa con patio ubicada cerca a las principales vias del...</p>
-                        <a href="../pages/Product_2.html">Ver más</a>
+                        <a href="./pages/Product_2.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
