Solucionando el problema de las rutas

--- a/index.html
+++ b/index.html
@@ -99,69 +99,69 @@
                         <figure><img src="./assets/img/casa (3).jpg" alt=""></figure>
                         <h4>Apartamento en teusaquillo</h4>
                         <p>APARTAMENTO A 5 MINUTOS DE 3 UNIVERSIDADES...</p>
-                        <a href="../pages/Product_3.html">Ver más</a>
+                        <a href="./pages/Product_3.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (4).jpg" alt=""></figure>
                         <h4>Casa en timiza</h4>
                         <p>CASA UBICADA EN SECTOR PRIVILEGIADO...</p>
-                        <a href="../pages/Product_4.html">Ver más</a>
+                        <a href="./pages/Product_4.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (5).jpg" alt=""></figure>
                         <h4>Casa en caño cristales</h4>
                         <p>CASA ESQUINERA MUY COMERCIAL CON 5 LOCALES...</p>
-                        <a href="../pages/Product_5.html">Ver más</a>
+                        <a href="./pages/Product_5.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (6).jpg" alt=""></figure>
                         <h4>Casa el codito</h4>
                         <p>Casa con patio ubicada cerca a las principales vias del...</p>
-                        <a href="../pages/Product_6.html">Ver más</a>
+                        <a href="./pages/Product_6.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (7).jpg" alt=""></figure>
                         <h4>Apartamento hermoso en casa blanca</h4>
                         <p>APARTAMENTO EN OPORTUNIDAD...</p>
-                        <a href="../pages/Product_7.html">Ver más</a>
+                        <a href="./pages/Product_7.html">Ver más</a>
                     </div>
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (8).jpg" alt=""></figure>
                         <h4>Casa en el santafe</h4>
                         <p>Casa en el centro historico de bogota cerca de parques y zonas verdes...</p>
-                        <a href="../pages/Product_8.html">Ver más</a>
+                        <a href="./pages/Product_8.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (9).jpg" alt=""></figure>
                         <h4>Casa en el santa marta</h4>
                         <p>Casa muy cerca de la playa a solo dos cuadras con licencia...</p>
-                        <a href="../pages/Product_9.html">Ver más</a>
+                        <a href="./pages/Product_9.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (10).jpg" alt=""></figure>
                         <h4>Casa en el poblado</h4>
                         <p>Hermosa casa en medellin, 6 cuartos y 2 baños 3 garajes y pisina a 20 minutos en auto del centro de la ciudad...</p>
-                        <a href="../pages/Product_10.html">Ver más</a>
+                        <a href="./pages/Product_10.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (11).jpg" alt=""></figure>
                         <h4>Casa en el quirigua</h4>
                         <p>HERMOSA CASA, CONSTA DE 3 HABITACIONES CON CLOSET, 2 BAÑOs...</p>
-                        <a href="../pages/Product_11.html">Ver más</a>
+                        <a href="./pages/Product_11.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (5).jpg" alt=""></figure>
                         <h4>Casa en el codito</h4>
                         <p>HERMOSA CASA REFORMADA. CONSTA DE 2 HABITACIONES CON CLOSET, 1 BAÑO...</p>
-                        <a href="../pages/Product_12.html">Ver más</a>
+                        <a href="./pages/Product_12.html">Ver más</a>
                     </div>
                 </div>
             </div>
