--- a/pages/Product_12.html
+++ b/pages/Product_12.html
@@ -69,7 +69,7 @@
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
+                                <img src="./assets/img/casa (5).jpg" class="d-block w-100" alt="">
                             </div>
                             <div class="carousel-item">
                                 <img src="../assets/img/casa (10).jpg" class="d-block w-100" alt="">
