devolviendo los cambios de rutas

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="targeta">
                         <figure><img src="./assets/img/casa (11).jpg" alt=""></figure>
                         <h4>Casa en el quirigua</h4>
-                        <p>HERMOSA CASA, CONSTA DE 3 HABITACIONES CON CLOSET, 2 BAÑOs...</p>
+                        <p>HERMOSA CASA, CONSTA DE 3 HABITACIONES CON CLOSET, 2 BAÑOS...</p>
                         <a href="./pages/Product_11.html">Ver más</a>
                     </div>
 
