--- a/pages/Product_11.html
+++ b/pages/Product_11.html
@@ -69,13 +69,13 @@
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./assets/img/casa (11).jpg" class="d-block w-100" alt="">
+                                <img src="../assets/img/casa (11).jpg" class="d-block w-100" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/img/casa (2).jpg" class="d-block w-100" alt="">
+                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/img/casa (6).jpg" class="d-block w-100" alt="">
+                                <img src="../assets/img/casa (6).jpg" class="d-block w-100" alt="">
                             </div>
                         </div>
                         <button class="carousel-control-prev bg-dark" type="button"
